--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -49,7 +49,7 @@ main {
 }
 
 /* scrollbar */
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 8px;
 }
 ::-webkit-scrollbar-track {
@@ -57,4 +57,4 @@ main {
 }
 ::-webkit-scrollbar-thumb {
     background: #747272;
-} */
+}
